# language-models-2026

./: .gitignore  81331f6c-9161-4842-afc1-3a965098d0c7.jsonl  CLAUDE.local.md  CLAUDE.md  README.md  bakeoff.sh  bakeoff_report.py  connectivityTest.py  course_feedback_tracker.md  course_setup.md  deploy_to_hf.py  evaluate.py  evaluate_health.py  extract_examples.py  main.py  notebook_image_catalogue.md  problem_statement.md  project_structure.md  pyproject.toml  upload_to_colab.sh
.claude/: settings.json
app/: README  streamlit_app.py
data/: cooking_techniques.md  finetune_option_a.jsonl  finetune_option_b.jsonl  parse_raw_and_join.py  prompt_eval.csv  technique_chunks_enriched.jsonl
demo/: cached_ask.json  cached_classify.json  cma_sections.json
notebooks/: week1_introduction_to_llms.ipynb  week1_introducton_to_llms.ipynb  week2_tokenization_and_embedding.ipynb  week3_transformer_architecture.ipynb  week4_prompt_tuning_and_evaluation.ipynb  week5_fine_tuning_with_adapters.ipynb  week6_semantic_search_and_rag.ipynb  week8_evaluation_and_beyond.ipynb
prompts/: week1_problem_statement_prompt.md  week2_embeddings_and_evaluation.md  week3_transformer_architecture_prompt.md  week4_prompt_tuning_and_evaluation.md  week5_fine_tuning_with_adapters.md  week6_semantic_search_and_rag.md  week7_multimodal_models.md  week8_evaluation_and_beyond.md
rag/: ask.py  build_index.py  eval.py  eval_queries.yaml
results/: cleaned_predictions_zeroshot_gemma4-12b_gold.csv  comparison_table.csv  confusion_ablation_nodefs.csv  confusion_embed_lr.csv  confusion_rag_gemma4-12b.csv  (+33 more)
(+48 files in other folders)
