[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/baseline_recipe_classifier"]

[project]
name = "applied-ml-course"
version = "0.1.0"
requires-python = ">=3.12, <3.13"
dependencies = [
    "accelerate>=1.13.0",
    "chromadb>=1.5.5",
    "datasets>=4.8.5",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "notebook>=7.5.5",
    "ollama>=0.6.1",
    "pandas>=3.0.1",
    "peft>=0.19.1",
    "pillow>=12.1.1",
    "protobuf>=3.20.0,<4.0.0",
    "pytest>=8.0.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.40.0",
    "transformers>=5.3.0",
]
